# ShakEngine3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO.md  TODO.txt  cube.txt  vcpkg.json  vcpkg_commands.txt
Editor/: CMakeLists.txt
Editor/src/: ShakEditor.cpp  TestApp.cpp
Engine/: CMakeLists.txt  README.md  TODO.md  cube.txt
Engine/include/: AppContext.h  Component.h  GLCheck.h  GameObject.h  Includes.h  Material.h  Mesh.h  Renderer.h  SDLCheck.h  Scene.h  SceneManager.h  Shader.h  ShakEngine.h  TestCube.h  TestSkybox.h  UIManager.h
Engine/include/UI/: UILayer.h  UIManager.h  UIWidget.h
Engine/include/UI/widgets/: Button.h  TextBox.h
Engine/include/components/: CameraComponent.h  TestComponent.h
Engine/include/interfaces/: IAppControl.h
Engine/include/scenes/: TestScene.h
Engine/shaders/: cubemap.frag  plain.frag  plain.vert  test.frag
Engine/src/: App.cpp  AssetManager.cpp  Component.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  ShakEngine.cpp  Texture.cpp  UIManager.cpp
Engine/src/UI/: UILayer.cpp  UIManager.cpp  UIWidget.cpp
Engine/src/components/: MeshComponent.cpp
SandboxGame/: CMakeLists.txt
SandboxGame/include/: TestMaterial.h  TestScene.h  TestSceneSB.h  TestUILayer.h  TestWidget.h
SandboxGame/src/: SandboxGame.cpp
cmake/: CompileShadersSpirv.cmake  ImGui.cmake  ImGuiCMakeLists.cmake
include/: AssetManager.h  Camera.h  Component.h  CubeMap.h  Event.h  GameObject.h  Includes.h  Material.h  Mesh.h  Renderer.h  Scene.h  SceneManager.h  Shader.h  TestCamera.h  TestCube.h  TestGO.h  TestSkybox.h  Texture.h  Transform.h
include/components/: CameraComponent.h  MeshComponent.h
include/interfaces/: IRenderable.h
shaders/: cubemap.vert  test.frag  test.vert
src/: App.cpp  AssetManager.cpp  Camera.cpp  Component.cpp  CubeMap.cpp  GameObject.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  ShakEngine.cpp  TestApp.cpp  Texture.cpp  Transform.cpp  main.cpp
src/components/: MeshComponent.cpp
